--- a/src/main/resources/templates/account.html
+++ b/src/main/resources/templates/account.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en"
+      xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
 
     <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
@@ -36,11 +38,11 @@
 
 
                             <div class="col-xs-6">
-                                <a href="/user/login"     id="login-form-link" th:classappend="${form}=='login' ? 'active' : ''" th:disabled="${form}!='login'">Login</a>
+                                <a href="/users/login"     id="login-form-link" th:classappend="${form}=='login' ? 'active' : ''" th:disabled="${form}!='login'">Login</a>
                             </div>
 
                             <div class="col-xs-6">
-                                <a href="/user/register" id="register-form-link" th:classappend="${form}=='register' ? 'active' : ''" th:disabled="${form}!='register'">Register</a>
+                                <a href="/users/register" id="register-form-link" th:classappend="${form}=='register' ? 'active' : ''" th:disabled="${form}!='register'">Register</a>
                             </div>
 
 
@@ -51,7 +53,7 @@
                             <div class="col-lg-12">
 
 
-                                <form id="login-form" th:action="@{/user/login}" th:method="POST"
+                                <form id="login-form" th:action="@{/users/login}" th:method="POST"
                                       role="form" th:if="${form}=='login'" th:object="${user}">
                                     <div class="form-group">
                                         <input type="text" name="username" id="log_username" tabindex="1"
@@ -101,7 +103,7 @@
                                     </div>
                                 </form>
 
-                                <form id="register-form" th:action="@{/user/register}" th:method="POST"
+                                <form id="register-form" th:action="@{/users/register}" th:method="POST"
                                       role="form" th:if="${form}=='register'" th:object="${user}">
                                     <div class="form-group">
                                         <input type="text" tabindex="1"
