--- a/src/main/resources/templates/catalog.html
+++ b/src/main/resources/templates/catalog.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en"
+      xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security"
+>
 <head>
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
@@ -47,7 +50,7 @@
             <div class="modal-body">
                 <form action="#" method="get" id="sort_form">
 
-<!--                    Change ids(and label fors) and sort options-->
+                    <!--                    Change ids(and label fors) and sort options-->
 
                     <input type="radio" name="sort_alphabetically" value="Sort Alphabetically" id="1">
                     <label for="1">Sort Alphabetically</label>
@@ -64,8 +67,10 @@
                 </form>
 
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal" id="closeModalBtn">Close</button>
-                    <button type="submit" class="btn btn-primary" id="saveSortBtn" form="sort_form">Save changes</button>
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal" id="closeModalBtn">Close
+                    </button>
+                    <button type="submit" class="btn btn-primary" id="saveSortBtn" form="sort_form">Save changes
+                    </button>
                 </div>
             </div>
 
@@ -95,18 +100,21 @@
                         <div class="card mb-4 box-shadow productCard">
                             <img class="card-img-top"
                                  alt="Thumbnail [100%x225]" style="height: 225px; width: 100%; display: block;"
-                                 th:if="*{pictures.size()>0}" th:src="@{*{pictures[0]}}"
+                                 th:src="@{*{pictures[0]}}"
                             >
                             <div class="card-body">
                                 <p class="card-text" th:text="*{title}"></p>
                                 <div class="d-flex justify-content-between align-items-center">
                                     <div class="btn-group">
                                         <a type="button"
-                                           class="btn btn-sm btn-outline-secondary cardBtn detailsBtn stretched-link" th:href="@{/catalog/deck/{deckId} (deckId=*{id})}">View</a>
+                                           class="btn btn-sm btn-outline-secondary cardBtn detailsBtn stretched-link"
+                                           th:href="@{/catalog/deck/{deckId} (deckId=*{id})}">View</a>
                                         <a type="button"
-                                           class="btn btn-sm btn-outline-secondary cardBtn editBtn" th:href="@{/catalog/deck/edit/{deckId} (deckId=*{id})}">Edit</a>
+                                           class="btn btn-sm btn-outline-secondary cardBtn editBtn"
+                                           th:href="@{/catalog/deck/edit/{deckId} (deckId=*{id})}">Edit</a>
                                         <a type="button"
-                                           class="btn btn-sm btn-outline-secondary cardBtn deleteBtn" th:href="@{/catalog/deck/delete/{deckId} (deckId=*{id})}">Delete</a>
+                                           class="btn btn-sm btn-outline-secondary cardBtn deleteBtn"
+                                           th:href="@{/catalog/deck/delete/{deckId} (deckId=*{id})}">Delete</a>
                                     </div>
                                 </div>
                             </div>
@@ -122,8 +130,19 @@
 
 </body>
 
-<script th:src="@{/js/backToTop.js}"></script>
-<script th:src="@{/js/searchbar.js}"></script>
-<script th:src="@{/js/sidebar.js}"></script>
+<!--<script th:inline="javascript">-->
+<!--    /*<![CDATA[*/-->
+
+
+<!--    searchbar.addEventListener("submit", (ev)=>{-->
+<!--        search(ev,"decks");-->
+<!--    })-->
+
+<!--    /*]]>*/-->
+<!--</script>-->
+
+<script th:src="@{/js/backToTop.js}" type="module"></script>
+<script th:src="@{/js/searchbar.js}" type="module"></script>
+<script th:src="@{/js/sidebar.js}" type="module"></script>
 
 </html>
