--- a/src/main/resources/templates/fragments/navigation.html
+++ b/src/main/resources/templates/fragments/navigation.html
@@ -2,14 +2,14 @@
     <a href="/"><img src="../../images/emblem.png" alt="Victory"></a>
 
     <ul id="menu">
-        <li><a th:href="@{/catalog}">Catalog</a></li>
-        <span id="guest-nav" th:unless="${@currentUser.isLoggedIn()}">
-                    <li class="guest"><a th:href="@{/user/login}">Login</a></li>
-                    <li class="guest"><a th:href="@{/user/register}">Register</a></li>
+        <li><a th:href="@{/decks/all}">Catalog</a></li>
+        <span id="guest-nav" sec:authorize="!isAuthenticated()">
+                    <li class="guest"><a th:href="@{/users/login}">Login</a></li>
+                    <li class="guest"><a th:href="@{/users/register}">Register</a></li>
                 </span>
-        <span id="user-nav" th:if="${@currentUser.isLoggedIn()}">
-                    <li class="user"><a th:href="@{/search}">Offers</a></li>
-                    <li class="user"><a th:href="@{/create}">Wishlist</a></li>
+        <span id="user-nav" sec:authorize="isAuthenticated()">
+                    <li class="user"><a th:href="@{/offers}">Offers</a></li>
+                    <li class="user"><a th:href="@{/users/{username}/wishlist (username=#authentication.getPrincipal().getUser().getUsername())}">Wishlist</a></li>
                     <li id="logoutBtn" class="user"><a th:href="@{/user/logout}">Logout</a></li>
         </span>
     </ul>
