--- a/src/main/resources/templates/addOffer.html
+++ b/src/main/resources/templates/addOffer.html
@@ -157,7 +157,7 @@
     </div>
 </main>
 
-<footer>&copy Victory 2022. All rights reserved.</footer>
+<th:block th:replace="~{/fragments/footer.html}"/>
 
 </body>
 </html>
