--- a/src/main/resources/templates/deckDetails.html
+++ b/src/main/resources/templates/deckDetails.html
@@ -23,6 +23,7 @@
     <script src="https://kit.fontawesome.com/b18db754f0.js" crossorigin="anonymous"></script>
 
     <script src="../../js/sidebar.js" type="module"></script>
+    <script src="../../js/like.js" type="module"></script>
     <link rel="stylesheet" href="../../css/productDetails.css"/>
 
     <link rel="icon" href="../../images/ace-of-spades.png">
@@ -53,6 +54,16 @@
                     <div class="col-lg-7 col-md-7 col-sm-6 description-details">
                         <h4 class="box-title mt-5">Product description</h4>
                         <p th:text="*{description}"></p>
+
+<!--                        todo: use rest api to like the deck and add it to wishlist-->
+                        <button class="btn btn-dark btn-rounded mr-1 heart-btn"
+                                th:classappend="*{liked} ? 'liked' : ''"
+                                data-toggle="tooltip" title=""
+                                data-original-title="Add to cart"
+                                th:onclick="like(this, [[${deck.title}]])"
+                        >
+                            <i class="fa-solid fa-heart"></i>
+                        </button>
                     </div>
                     <div class="col-lg-12 col-md-12 col-sm-12">
                         <h3 class="box-title mt-5">General Info</h3>
@@ -97,6 +108,39 @@
     </div>
 
 </main>
+
+<!--<script th:inline="javascript">-->
+
+<!--    const likeBtn=document.querySelector(".heart-btn");-->
+
+<!--    likeBtn.addEventListener("click", like(ev,/*[[${deck.title}]]*/))-->
+
+<!--    async function like(ev, deckTitle){-->
+<!--        ev.preventDefault();-->
+
+<!--        const options={-->
+<!--            method: "post",-->
+<!--            deckTitle: deckTitle-->
+<!--        };-->
+
+<!--        await fetch("localhost:8000/api/users/like", options);-->
+<!--    }-->
+<!--</script>-->
+
+<script>const likeBtn=document.querySelector(".heart-btn");
+
+// todo: finish the like functionality
+
+async function like(ev, deckTitle){
+    ev.preventDefault();
+
+    const options={
+        method: "post",
+        deckTitle: deckTitle
+    };
+
+    await fetch("localhost:8000/api/users/like", options);
+}</script>
 
 
 <th:block th:replace="~{/fragments/footer.html}"/>
