--- a/src/main/resources/templates/offerDetails.html
+++ b/src/main/resources/templates/offerDetails.html
@@ -45,26 +45,27 @@
     <div class="container">
         <div class="card" th:object="${offer}">
             <div class="card-body">
-                <h3 class="card-title" th:text="|*{deckTitle} offer - *{status}|">Rounded Chair</h3>
+                <h3 class="card-title" th:text="|*{deck.title} offer - *{status}|">Rounded Chair</h3>
                 <div class="row">
+
                     <div class="col-lg-5 col-md-5 col-sm-6 image-cont">
                         <div class="white-box text-center">
                             <img th:src="*{pictures[0]}" class="img-responsive">
                         </div>
                     </div>
+
                     <div class="col-lg-7 col-md-7 col-sm-6 description-details">
                         <h4 class="box-title mt-5">Offer description</h4>
                         <p th:text="*{description}"></p>
                         <h2 class="mt-5" th:text="|*{price}€|">
                         </h2>
-                        <button class="btn btn-dark btn-rounded mr-1 heart-btn liked" data-toggle="tooltip" title="" data-original-title="Add to cart">
-                            <i class="fa-solid fa-heart"></i>
-                        </button>
+<!--                        todo: to cart, buy, like functionality - probably through rest api-->
                         <button class="btn btn-dark btn-rounded mr-1 carted" data-toggle="tooltip" title="" data-original-title="Add to cart">
                             <i class="fa fa-shopping-cart"></i>
                         </button>
-                        <button class="btn btn-primary btn-rounded buy-btn"><a href="#" id="purchase-btn">Buy Now</a></button>
+                        <button class="btn btn-primary btn-rounded buy-btn"><a href="javascript:void(0)" id="purchase-btn">Buy Now</a></button>
                     </div>
+
                     <div class="col-lg-12 col-md-12 col-sm-12">
                         <h3 class="box-title mt-5">General Info</h3>
                         <div class="table-responsive">
@@ -72,7 +73,7 @@
                                 <tbody>
                                 <tr>
                                     <td>Deck</td>
-                                    <td><a th:href="@{/decks/{title} (title=*{deckTitle})}" th:text="*{deckTitle}"></a></td>
+                                    <td><a th:href="@{/decks/{id} (id=*{deck.id})}" th:text="*{deck.title}"></a></td>
                                 </tr>
                                 <tr>
                                     <td>Seller</td>
@@ -97,7 +98,7 @@
 
 </main>
 
-<footer>&copy Victory 2022. All rights reserved.</footer>
+<th:block th:replace="~{/fragments/footer.html}"/>
 
 </body>
 </html>
